<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgIMSFacebook"
        android:layout_row="0"
        android:layout_column="0"
        android:src="@mipmap/ic_facebook_logo"
        android:layout_rowSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/ims_fb_page" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ims_fb_page_smalltext"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgSHOEKFacebook"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:src="@mipmap/ic_facebook_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shoek_fb_page"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/shoek_fb_page_smalltext"
        android:id="@+id/textView4"
        android:layout_row="3"
        android:layout_column="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgSHOEKYoutube"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:src="@drawable/youtube" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shoek_youtube"
        android:id="@+id/textView5"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/shoek_youtube_smalltext"
        android:id="@+id/textView6"
        android:layout_row="5"
        android:layout_column="1" />

</GridLayout>